--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,20 @@ slides > slide > hgroup + article {
 .small {
   font-size: 80%;
 }
+
+.moresmall {
+  font-size: 60%;
+}
+
+ul {
+	position: relative;
+	list-style: none;
+/* margin-left: 0; */
+/*	padding-left: 1.2em; */
+}
+ul li:before {
+	content: "–";
+	position: absolute;
+	left: 0;
+	font-weight: 650;
+}
